feat: remove Noah public inference call caps
